# mamba2-jax

./: README.md  main.py  pyproject.toml  requirements.txt  test_run.py
APPENDIX/: APPENDIX.md
examples/: 01_lm_forward_demo.py  02_lm_tiny_train.py  03_timeseries_sine_forecast.py  04_stream_state_demo.py  05_inspect_hidden_states.py
mamba2_jax/: __init__.py  config.py  lm.py  model.py  modeling.py  params.py  ssd.py  timeseries.py
test/: test_lm.py  test_model_states.py  test_run.py  test_ssd.py  test_timeseries.py
tests/: run_model.py  test_mamba2.py
