[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba2-jax"
version = "0.1.0"
description = "Implementation of Mamba2 SSM on JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flax>=0.12.1",
    "jax>=0.8.1",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.28",
]
license = { text = "MIT" }
authors = [{ name = "Cosmo Santoni" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = {"Homepage" = "https://github.com/CosmoNaught/mamba2-jax"}

[project.optional-dependencies]
dev = ["pytest>=9.0.1"]

[tool.setuptools]
packages = ["mamba2_jax"]
